--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,56 +1,62 @@
 /* declare variables for config */
 $primary-color: #000;
-$secondary-color:#00b1a7; 
+$secondary-color: #00b1a7;
 $show-home-bgn: true;
-/* $home-bgn: url(../img/unspl.jpg); */
 $background-opacity: 0.7;
-$xing-color: #4099ff; 
+$xing-color: #4099ff;
 $facebook-color: #3b5998;
-$linkedin-color: #0077B5;
+$linkedin-color: #0077b5;
 $github-color: #333;
-$instagram-color: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);  
-
+$instagram-color: linear-gradient(
+  45deg,
+  #f09433 0%,
+  #e6683c 25%,
+  #dc2743 50%,
+  #cc2366 75%,
+  #bc1888 100%
+);
 
 /* Mixins */
 @mixin easeOut {
-    transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
-@mixin background {
-   @if $show-home-bgn {
-     &#bg-img {
-         background: #fff;
-          } 
-      }
-   }
 
-
-   // Set function to redefine color on light background
-   @function set-text-color($color) {
-       @if(lightness($color) > 40) {
-           @return #000;
-       } @else {
-           @return #fff;
-       }
-   }
-
+// Set function to redefine color on light background
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
 
 // Media Queries Mixins
+@mixin xsm {
+  @media screen and (max-width: 420px) and (min-width: 320px) {
+    @content;
+  }
+}
+
 @mixin mediaSm {
-    @media screen and (max-width: 500px) {
-        @content;    }
+  @media screen and (max-width: 500px) and (min-width: 421px) {
+    @content;
+  }
 }
 
 @mixin mediaMd {
-    @media screen and (max-width: 768px) {
-        @content;    }
+  @media screen and (max-width: 768px) {
+    @content;
+  }
 }
 
 @mixin mediaLg {
-    @media screen and (min-width: 769px) and (max-width: 1170px) {
-        @content;    }
+  @media screen and (max-width: 1170px) and (min-width: 769px) {
+    @content;
+  }
 }
 
 @mixin mediaXl {
-    @media screen and (min-width: 1171px) {
-        @content;    }
+  @media screen and (min-width: 1400px) {
+    @content;
+  }
 }
