--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -7,18 +7,19 @@
   }
 
   & .mysign {
-    display: inline;
+    display: inline-block;
+    margin: 10px 0 0 70px;
   }
   & img {
-    width: 250px;
-    height: 100px;
+    width: 50px;
+    height: 60px;
   }
 }
 
 /*menu Button */
 .menu-btn {
   position: absolute;
-  z-index:20;
+  z-index: 20;
   right: 1.5rem;
   top: 1.5rem;
   overflow: hidden;
@@ -26,10 +27,10 @@
   @include easeOut;
 
   .btn-line {
-    width: 1.5rem;
+    width: 1.7rem;
     height: 0.2rem;
     margin-bottom: 0.2rem;
-    background: #afacac;
+    background: #00b1a7;
     @include easeOut;
   }
   /* menu turns to close icon */
@@ -97,7 +98,7 @@
     background: gainsboro;
     transform: translate3d(0, 100%, 0);
     @include easeOut;
-    
+
     // animation slide from bottom
     &.show {
       transform: translate3d(0, 0, 0);
@@ -105,7 +106,7 @@
 
     .portrait {
       width: 30rem;
-      height:30rem;
+      height: 30rem;
       background: url("../img/head1.png");
       background-size: cover;
       border-radius: 50%;
@@ -132,12 +133,12 @@
   .menu-nav .nav-item > .nav-link::before {
     content: "";
     position: absolute;
-    width: 15%;
-    height: 2px;
+    width: 25%;
+    height: 5px;
     bottom: 0;
     top: 0;
     left: 0;
-    background-color: red;
+    background-color: #00b1a7;
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
@@ -166,7 +167,7 @@
 
   .nav-link {
     display: inline-block;
-    font-size: 5rem;
+    font-size: 3rem;
     text-transform: uppercase;
     padding: 1rem 0;
     color: gray;
