--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,24 +1,16 @@
 // WIdescreens
 @include mediaXl {
-  main .introduction .introduction-inner .image .image-inner img {
-    width: 600px;
-  }
-
-  .social-media {
-    top: 40%;
-  }
-
   /* abouut */
   .bio #about-txt {
-    font-size: 9rem;
+    font-size: 6rem;
   }
 
   #my-background {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .about-info .job ul {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
   }
 
   .about-info .job .dev-sub {
@@ -26,13 +18,13 @@
   }
 
   .about-info .job .overlay .library img {
-    width: 10%; //changes
+    width: 10%;
     margin: 2px;
     left: 10rem;
   }
 
   .about-info .job .backend img {
-    width: 7vw; // changes
+    width: 7vw;
     display: block;
     position: relative;
     left: 7rem;
@@ -40,7 +32,7 @@
 
   .about-info .job .tools img {
     display: inline-block;
-    width: 4vw; //changes
+    width: 4vw;
     margin: 10px;
   }
 
@@ -49,7 +41,7 @@
   }
 
   .career_section .timeline_act h3 {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .career_section .timeline_act .date {
@@ -62,7 +54,7 @@
 
   /* works */
   #work-text {
-    font-size: 9rem;
+    font-size: 5rem;
   }
   .projects {
     grid-template-columns: repeat(3, 1fr);
@@ -76,7 +68,7 @@
 
   /* contact */
   #contact-intro .lg-heading #contact-text {
-    font-size: 9rem;
+    font-size: 7rem;
   }
 }
 
@@ -85,10 +77,6 @@
   /* home */
   .social-media .icons {
     margin-top: 1.6rem;
-  }
-
-  .introduction .introduction-inner .image .image-inner img {
-    width: 450px;
   }
 
   /* about */
@@ -135,7 +123,6 @@
 //Tablets
 @include mediaMd {
   /* homepage */
-
   #home {
     height: 100%;
   }
@@ -160,9 +147,7 @@
     }
 
     .introduction .introduction-inner .content {
-      width: 50%;
-
-      & .content-inner {
+      .content-inner {
         width: 100%;
         text-align: left;
         margin: 10px 25px;
@@ -173,7 +158,7 @@
           width: 300px;
           margin-bottom: 30px;
 
-          & .line {
+          .line {
             height: 120px;
           }
         }
@@ -184,19 +169,18 @@
           margin: 10px 0 28px;
         }
       }
-
-      & .image {
-        width: 50%;
-        .image-inner {
-          img {
-            width: 450px;
-          }
+    }
+    .introduction .introduction-inner .image {
+      width: 100%;
+      .image-inner {
+        img {
+          bottom: 30%;
         }
       }
     }
 
     .social-media {
-      top: 66%;
+      top: 76%;
     }
   }
 
@@ -232,9 +216,7 @@
   }
 
   /*about */
-  .bio #about-txt {
-    font-size: 4rem;
-  }
+
   .about-info {
     grid-template-areas:
       "bioimage"
@@ -348,7 +330,6 @@
   }
 
   /* contact */
-
   #contact-intro {
     left: 20%;
     top: 25%;
@@ -389,13 +370,21 @@
 
 // Smartphones and small devices
 @include mediaSm {
+  header {
+    position: absolute;
+  }
   /* homepage */
+  .navbar-wrapper .mysign {
+    margin: 10px 0 0 20px;
+  }
+
   .navbar-wrapper img {
-    width: 180px;
+    width: 40px;
+    height: 50px;
   }
 
   .nav-item .nav-link {
-    font-size: 2.3rem;
+    font-size: 2rem;
   }
 
   #home {
@@ -410,48 +399,88 @@
     margin-right: 15px;
   }
 
-  main .introduction .introduction-inner .content .content-inner {
-    width: 100%;
-    height: 100%;
-    margin: 5px 20px;
+  main .introduction .introduction-inner {
+    grid-template-columns: 50% 50%;
+    height: 100vh;
   }
 
   main .introduction .introduction-inner .content {
-    width: 50%;
+    width: 100%;
     text-align: left;
     margin-top: 100px;
   }
 
+  main .introduction .introduction-inner .content .content-inner {
+    width: 100%;
+    height: 95%;
+    margin: 5px 10px;
+  }
+
   main .introduction .introduction-inner .content .content-inner h1 {
-    font-size: 4.3rem;
-    padding: 10px 20px;
-    line-height: 4.8rem;
-    width: 200px;
+    margin: 100px 0 0 0;
+    width: 100%;
+    font-size: 100px;
 
     .line {
-      height: 150px;
+      height: 140px;
+      #p-name {
+        font-size: 35px;
+        font-weight: 200;
+        line-height: 1.2;
+      }
     }
   }
 
+  main .introduction .introduction-inner .content .content-inner h1 .line-2 {
+    letter-spacing: 1px;
+    height: 190px;
+  }
+
   main .introduction .introduction-inner .content .content-inner p {
-    font-size: 0.7rem;
-    width: 200px;
-    margin: 43px 20px;
+    display: none;
+  }
+
+  main
+    .introduction
+    .introduction-inner
+    .content
+    .content-inner
+    .home_button
+    #redirect {
+    font-size: 1rem;
+    padding: 15px 30px;
+  }
+
+  main .introduction .introduction-inner .image {
+    width: 100%;
   }
 
   main .introduction .introduction-inner .image .image-inner img {
-    width: 400px;
-    bottom: 50px;
+    width: 100%;
+    bottom: 50%;
   }
 
   main .social-media {
-    width: 350px;
-    top: 80%;
+    width: 100%;
+    height: 80px;
+    top: 84%;
+    left: -40%;
+  }
+
+  main .icons .icon {
+    margin-right: 5px;
+    font-size: 40px;
+    line-height: 60px;
+    height: 60px;
+    width: 60px;
   }
 
   /* about page */
+  #about-body header {
+    position: absolute;
+  }
   #about {
-    padding: 1rem;
+    padding: 10px;
   }
   #about h1 {
     font-size: 5rem;
@@ -460,6 +489,12 @@
       font-size: 3rem;
     }
   }
+
+  .about-info {
+    padding: 1rem;
+    grid-gap: 1rem;
+  }
+
   .about-info .bio-image {
     width: 100%;
     height: auto;
@@ -478,11 +513,11 @@
     margin-bottom: 0.2rem;
 
     & .dev-main {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       padding-bottom: 0.4rem;
     }
     & ul {
-      font-size: 1.2rem;
+      font-size: 1rem;
     }
     & .dev-sub {
       font-size: 0.7rem;
@@ -491,8 +526,14 @@
   }
 
   .about-info .job .overlay .library img {
-    left: 8rem;
+    left: 10rem;
   }
+
+  .about-info .job .overlay .backend img {
+    width: 17vw;
+    display: grid;
+  }
+
   .parallax {
     background-position: 50% 50%;
     background-size: cover;
@@ -515,20 +556,20 @@
     padding: 5px 10px;
   }
   .career_section blockquote {
-    font-size: 1.6em;
-    width: 71%;
+    font-size: 1.2em;
+    width: 80%;
   }
 
   .career_section .timeline_act h3 {
-    font-size: 17px;
-  }
-
-  .career_section .timeline_act .date {
     font-size: 15px;
   }
 
+  .career_section .timeline_act .date {
+    font-size: 12px;
+  }
+
   .career_section .timeline_act h4 {
-    font-size: 11px;
+    font-size: 10px;
   }
 
   .career_section .timeline_act {
@@ -620,20 +661,21 @@
 
   /* contact page */
   #contact-intro {
-    left: 20%;
+    left: 10%;
     top: 40%;
 
     & .lg-heading {
-      font-size: 5rem;
+      font-size: 4rem;
       letter-spacing: 5px;
 
       #contact-text {
         font-size: 3rem;
+        margin-left: -26px;
       }
     }
 
     & .sm-heading {
-      font-size: 9px;
+      font-size: 15px;
       letter-spacing: 5px;
     }
   }
@@ -667,7 +709,317 @@
   }
 
   /* footer */
-  .footer-profile ul li {
+  #main-footer .footer-profile ul li {
+    font-size: 8px;
+    font-weight: 200;
+  }
+}
+
+/* very small devices */
+@include xsm {
+  /* homepage */
+  .navbar-wrapper .mysign {
+    margin: 10px 0 0 5px;
+  }
+
+  .navbar-wrapper img {
+    width: 40px;
+    height: 50px;
+  }
+
+  .nav-item .nav-link {
+    font-size: 1.9rem;
+  }
+
+  main .introduction .introduction-inner {
+    grid-template-columns: 50% 50%;
+    height: 100vh;
+  }
+
+  main .introduction .introduction-inner .content {
+    width: 100%;
+    text-align: left;
+    margin-top: 100px;
+  }
+
+  main .introduction .introduction-inner .content .content-inner {
+    width: 100%;
+    height: 100%;
+    margin: 4px 5px;
+  }
+
+  main .introduction .introduction-inner .content .content-inner h1 {
+    font-size: 90px;
+    padding: 10px 5px;
+    width: 100%;
+    margin: 50px 0 0 0;
+  }
+
+  main .introduction .introduction-inner .content .content-inner p {
+    display: none;
+  }
+
+  main .introduction .introduction-inner .content .content-inner h1 .line {
+    height: 120px;
+    #p-name {
+      font-size: 23px;
+      font-weight: 300;
+      line-height: 1.4;
+    }
+  }
+
+  main .introduction .introduction-inner .content .content-inner h1 .line-2 {
+    letter-spacing: 1px;
+    height: 140px;
+  }
+
+  main .introduction .introduction-inner .content .content-inner .home_button {
+    margin-top: 5px;
+  }
+
+  main
+    .introduction
+    .introduction-inner
+    .content
+    .content-inner
+    .home_button
+    #redirect {
+    font-size: 0.8rem;
+    padding: 10px 15px;
+  }
+  main .introduction .introduction-inner .image {
+    width: 100%;
+  }
+
+  main .introduction .introduction-inner .image .image-inner img {
+    width: 100%;
+    bottom: 50%;
+  }
+
+  main .social-media {
+    width: 100%;
+    height: 60px;
+    top: 84%;
+    left: -50%;
+  }
+
+  main .icons .icon {
+    margin-right: 5px;
+    font-size: 30px;
+    line-height: 50px;
+    height: 51px;
+    width: 50px;
+  }
+
+  /* work */
+  #about {
+    padding: 5px;
+  }
+
+  #about h1 {
+    font-size: 3rem;
+    & span {
+      font-size: 2rem;
+      margin-left: -12px;
+    }
+  }
+
+  .about-info .bio-image {
+    width: 300px;
+    height: 300px;
+  }
+
+  .bio #my-background {
+    font-size: 12px;
+    text-align: left;
+  }
+
+  .about-info {
+    padding: 1rem 0.5rem;
+    grid-gap: 1rem;
+  }
+
+  .about-info .job {
+    width: 90%;
+    margin-bottom: 1rem;
+  }
+
+  .about-info .job ul {
+    font-size: 0.7rem;
+  }
+
+  .about-info .job .overlay .core-img img {
+    width: 100%;
+    display: block;
+  }
+
+  .about-info .job .overlay .library img {
+    width: 8%;
+    margin: 5px;
+    left: 9rem;
+  }
+
+  .about-info .job .backend img {
+    width: 15vw;
+    display: block;
+  }
+
+  .career_section {
+    padding: 5px 2px;
+  }
+  .career_section blockquote {
+    font-size: 0.8em;
+  }
+
+  .career_section .timeline_act {
+    height: 250px;
+  }
+
+  .career_section .timeline_act h3 {
+    font-size: 13px;
+  }
+
+  .career_section .timeline_act:nth-of-type(1) {
+    width: 48%;
+    top: 30%;
+    left: 52%;
+    margin-top: unset;
+  }
+
+  .career_section .timeline_act:nth-of-type(2) {
+    width: 48%;
+    right: 52%;
+    top: 21%;
+    margin-top: 15%;
+  }
+
+  .career_section .timeline_act:nth-of-type(3) {
+    width: 48%;
+    right: 0;
+    top: 63%;
+  }
+
+  .career_section .timeline_act:nth-of-type(4) {
+    width: 48%;
+    top: 72%;
+    right: 52%;
+  }
+
+  .career_section .timeline_act .date {
+    font-size: 14px;
+  }
+
+  .career_section .timeline_act h4 {
+    font-size: 8px;
+  }
+
+  /* work */
+  #work .lg-heading {
+    font-size: 3rem;
+
+    & span {
+      font-size: 3rem;
+      margin-left: -23px;
+    }
+  }
+
+  #work .sm-heading {
+    font-size: 7px;
+    letter-spacing: 5px;
+  }
+
+  .parallax2 {
+    background-position: 50% 50%;
+    height: 120px;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
+    padding: 0.6rem;
+  }
+
+  .section-gh {
+    margin: 1rem auto;
+    padding: 1rem;
+    width: 85vw;
+    height: 35vh;
+  }
+
+  #gh-hint {
+    font-size: 0.9rem;
+  }
+
+  #work .asp {
+    padding: 1rem 0.2rem;
+  }
+
+  #work .asp .req {
+    width: 80%;
+  }
+
+  #work .asp .req .req-header {
+    font-size: 0.8rem;
+  }
+
+  #work .asp .req .req-motive {
+    font-size: 9px;
+    text-align: left;
+    padding: 5px 10px;
+  }
+
+  /* contact */
+  #contact-intro {
+    left: 5%;
+    top: 40%;
+    width: 300px;
+  }
+
+  #contact-intro .lg-heading {
+    font-size: 3rem;
+    letter-spacing: 5px;
+  }
+
+  #contact-intro .sm-heading {
+    font-size: 10px;
+    letter-spacing: 5px;
+  }
+
+  #contact-intro .lg-heading #contact-text {
+    font-size: 3rem;
+    margin-left: -20px;
+  }
+
+  #contact {
+    padding: 5px;
+  }
+
+  .boxes {
+    margin: 1rem auto;
+    width: 80vw;
+  }
+
+  .boxes li {
     font-size: 0.6rem;
+  }
+
+  #resume a {
+    font-size: 0.6rem;
+    padding: 10px 20px;
+  }
+
+  #contact .contact-form {
+    width: 300px;
+  }
+
+  #contact .contact-form form {
+    padding: 1rem 1.5rem;
+  }
+
+  #contact .contact-form .form-control {
+    font-size: 12px;
+  }
+  #main-footer .footer-profile ul li {
+    font-size: 6px;
+    display: inline-block;
   }
 }
