--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,13 +7,14 @@
 }
 
 body {
-  @include background;
+  background-color: #fff;
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Teko", sans-serif;
+  font-family: "Aclonica", sans-serif;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 // Typography
@@ -24,7 +25,7 @@ h3 {
   letter-spacing: 5px;
 
   &.lg-heading {
-    font-size: 14vw;
+    font-size: 8vw;
   }
   &.sm-heading {
     margin-bottom: 2rem;
@@ -38,8 +39,9 @@ a {
 }
 header {
   position: fixed;
-  z-index: 2;
+  z-index: 6;
   width: 100%;
+  display: block;
 }
 .text-secondary {
   color: $secondary-color;
@@ -57,12 +59,11 @@ header {
 main {
   min-height: calc(100vh - 4rem);
 
-  /* new home GSAP animation */
+  /* home GSAP animation */
   .introduction {
     height: 100vh;
     position: relative;
-    background: #000;
-    color: #fff;
+    background: #fff;
 
     .introduction-addition-bg {
       background: #00b1a7;
@@ -75,7 +76,7 @@ main {
     }
 
     .introduction-bg {
-      background: #000;
+      background: #fff;
       position: absolute;
       left: 0;
       right: 0;
@@ -87,236 +88,238 @@ main {
     .introduction-inner {
       width: 100%;
       height: 100vh;
-      display: flex;
-      position: relative;
+      display: grid;
+      grid-template-columns: 40% 60%;
       overflow: hidden;
 
       .content {
-        width: 80%;
+        width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
+
         .content-inner {
-          width: 60%;
-          margin: 0 auto;
+          color: #000;
+          width: 90%;
+          margin: 20px 0 0 70px;
+
           h1 {
-            font-size: 3.6rem;
-            line-height: 2.8rem;
-            margin: 32px 0 0;
-            width: 500px;
+            font-size: 88px;
+            line-height: 1.2;
+            margin: 32px 0 0 0;
+            width: 100%;
+
             .line {
               overflow: hidden;
-              height: 70px;
+              height: 85px;
               position: relative;
               span {
                 position: absolute;
               }
+            }
+            .line-2 {
+              height: 80px;
+
               #p-name {
                 color: #00b1a7;
-              }
-            }
-          }
-          p {
-            font-size: 1.3rem;
-            color: lightgray;
-            letter-spacing: 4px;
-            line-height: 1.4;
-            width: 450px;
-            margin: 32px 0 80px;
-          }
-
-          .btn-row {
-            a {
-              display: inline-block;
-              font-size: 1rem;
-              padding: 10px 30px;
-              text-decoration: none;
-              font-weight: 600;
-              color: #00b1a7;
-              border-radius: 100px;
-              border: 1px solid white;
-              transition: 0.6s linear ease-in;
-              &:hover {
-                background: white;
-                color: black;
+                font-size: 30px;
+                font-weight: 200;
+                letter-spacing: 1px;
+                line-height: 1.5;
               }
             }
           }
         }
-      }
-      .image {
-        position: relative;
-        width: 40%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        .image-inner {
-          img {
-            width: 500px;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 1;
+        p {
+          font-size: 0.8rem;
+          color: #000;
+          letter-spacing: 2px;
+          line-height: 1.6;
+          width: 100%;
+          margin-bottom: 30px;
+        }
+
+        .home_button {
+          margin-top: 30px;
+          #redirect {
+            display: inline-block;
+            font-size: 1.2rem;
+            padding: 15px 40px;
+            text-decoration: none;
+            font-weight: 600;
+            color: #00b1a7;
+            border-radius: 100px;
+            border: 1px solid #00b1a7;
+            transition: 0.8s linear ease-in-out;
+            &:hover {
+              background: #00b1a7;
+              cursor: pointer;
+              color: #000;
+              border: 1px solid transparent;
+              box-shadow: 2px 5px 2px #212121;
+            }
           }
         }
       }
     }
+    .image {
+      .image-inner {
+        img {
+          width: 900px;
+          display: block;
+          position: absolute;
+          bottom: 20%;
+          right: 0;
+          z-index: 1;
+        }
+      }
+    }
   }
+}
 
-  .social-media {
-    width: 700px;
-    height: 100px;
-    position: absolute;
-    top: 50%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    margin: auto;
-    opacity: 0;
-  }
+.social-media {
+  width: 700px;
+  height: 100px;
+  position: absolute;
+  top: 74%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  margin: 0 auto;
+  opacity: 0;
+}
 
-  .icons {
-    margin-top: 0.5rem;
+.icons {
+  margin-top: 0.5rem;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+
+  &::before {
+    content: "";
+    display: inline-block;
     height: 100%;
-    width: 100%;
-    margin-bottom: 20px;
+    vertical-align: middle;
+  }
+
+  & .icon {
+    text-align: center;
+    display: inline-block;
+    font-size: 40px;
+    line-height: 70px;
+    height: 70px;
+    width: 70px;
+    margin-right: 20px;
+    border-radius: 100%;
+    position: relative;
+    color: gray;
 
     &::before {
       content: "";
-      display: inline-block;
-      height: 100%;
-      vertical-align: middle;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      border-radius: 100%;
+      z-index: -1;
     }
 
-    & .icon {
-      text-align: center;
-      display: inline-block;
-      font-size: 40px;
-      line-height: 70px;
-      height: 70px;
-      width: 70px;
-      margin-right: 20px;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      vertical-align: middle;
+      width: 100%;
+      height: 100%;
+      transform: scale(0);
+      background: #4099ff;
       border-radius: 100%;
-      position: relative;
+      z-index: -1;
+    }
 
-      &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        border-radius: 100%;
-        z-index: -1;
-      }
+    &:hover {
+      animation-name: bubble2;
+      animation-duration: 0.5s;
+      animation-delay: 0.1s;
+      animation-fill-mode: forwards;
 
       &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-        vertical-align: middle;
-        width: 100%;
-        height: 100%;
-        transform: scale(0);
-        background: #4099ff;
-        border-radius: 100%;
-        z-index: -1;
-      }
-
-      &:hover {
-        animation-name: bubble2;
+        animation-name: bubble;
         animation-duration: 0.5s;
-        animation-delay: 0.1s;
         animation-fill-mode: forwards;
-
+      }
+      &.icon-xing {
+        color: $xing-color;
         &::after {
-          animation-name: bubble;
-          animation-duration: 0.5s;
-          animation-fill-mode: forwards;
+          background: $xing-color;
         }
-        &.icon-xing {
-          color: $xing-color;
-          &::after {
-            background: $xing-color;
-          }
-        }
+      }
 
-        &.icon-facebook {
-          color: $facebook-color;
-          &::after {
-            background: $facebook-color;
-          }
+      &.icon-facebook {
+        color: $facebook-color;
+        &::after {
+          background: $facebook-color;
         }
+      }
 
-        &.icon-linkedin {
-          color: $linkedin-color;
-          &::after {
-            background: $linkedin-color;
-          }
+      &.icon-linkedin {
+        color: $linkedin-color;
+        &::after {
+          background: $linkedin-color;
         }
+      }
 
-        &.icon-github {
-          color: $github-color;
-          &::after {
-            background: $github-color;
-          }
+      &.icon-github {
+        color: $github-color;
+        &::after {
+          background: $github-color;
         }
+      }
 
-        &.icon-instagram {
-          color: $instagram-color;
-          &::after {
-            background: $instagram-color;
-          }
+      &.icon-instagram {
+        color: $instagram-color;
+        &::after {
+          background: $instagram-color;
         }
       }
     }
   }
+}
 
-  /* keyframes */
-  @keyframes bubble {
-    0% {
-    }
-    100% {
-      transform: scale(1);
-    }
+/* keyframes */
+@keyframes bubble {
+  0% {
   }
+  100% {
+    transform: scale(1);
+  }
+}
 
-  @keyframes bubble2 {
-    0% {
-    }
-    100% {
-      color: #fff;
-    }
+@keyframes bubble2 {
+  0% {
+  }
+  100% {
+    color: #fff;
   }
 }
 
 /* about scss */
 #about-body {
-  background: #000;
+  background: #fff;
 }
 
 #about {
   padding: 4rem;
 }
 
-.parallax {
-  background-image: url("../img/code.jpg");
-  background-attachment: fixed;
-  height: 300px;
-  background-position: 100% 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 #my-background {
-  font-size: 17px;
+  font-size: 13px;
   font-weight: normal;
   line-height: 2;
   letter-spacing: 1px;
@@ -329,7 +332,7 @@ main {
   }
 
   & .dev-lang {
-    color: #ffff;
+    color: #000;
     font-weight: 900;
     letter-spacing: 5px;
   }
@@ -338,7 +341,7 @@ main {
 #about-txt {
   font-size: 6rem;
   font-weight: 700;
-  margin-left: -20px;
+  margin-left: -35px;
   letter-spacing: -2px;
 }
 .about-info {
@@ -360,7 +363,7 @@ main {
   }
 
   #skill-txt {
-    font-size: 8vw;
+    font-size: 5vw;
   }
   .job-1 {
     grid-area: job1;
@@ -418,12 +421,12 @@ main {
     ul {
       list-style: none;
       display: inline-block;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
       text-transform: uppercase;
     }
 
     li {
-      color: #fff;
+      color: #000;
       opacity: 0.9;
       letter-spacing: 4px;
     }
@@ -441,7 +444,7 @@ main {
       transition: 0.3s ease;
       background-color: rgba(0, 0, 0, 0.8);
       & .core-img img {
-        width: 50%; // chnages
+        width: 50%;
         display: block;
       }
 
@@ -489,7 +492,7 @@ main {
   opacity: 0;
 }
 
-/* REFINED */
+/* REFINED timeline  */
 .career_section {
   padding: 3em;
   height: 100vh;
@@ -499,14 +502,14 @@ main {
   margin-bottom: 150px;
 
   blockquote {
-    font-size: 2.3em;
+    font-size: 1.8em;
     width: 30%;
     margin-top: 3%;
     position: absolute;
 
     #spanny {
       width: 100%;
-      background: red;
+      background: #00b1a7;
       display: block;
       height: 5px;
       margin-top: 20px;
@@ -515,7 +518,6 @@ main {
 
   .timeline_act {
     position: absolute;
-    /*     background: #00b1a7; */
     background: #fff;
     text-align: left;
     padding: 1.4em;
@@ -541,7 +543,7 @@ main {
   }
 
   .timeline_act h3 {
-    font-size: 20px;
+    font-size: 17px;
     letter-spacing: 1px;
   }
 
@@ -580,7 +582,7 @@ main {
   }
 }
 .sticky {
-  background: #000 !important;
+  background: #fff !important;
 }
 .detail-info {
   text-align: center;
@@ -600,7 +602,7 @@ main {
   transform: translate(-50%, 50%);
 }
 
-/* Portfolio / Works */
+/* Works */
 #wrapper-header {
   position: relative;
   display: flex;
@@ -643,7 +645,7 @@ main {
   bottom: 8vh;
   text-align: center;
   right: 0;
-  z-index: 10;
+  z-index: 5;
 }
 
 .header-down-arrow img {
@@ -668,7 +670,7 @@ main {
 }
 
 .parallax2 {
-  background-image: url("../img/workhard.jpg");
+  background-image: url("../img/brand1.jpg");
   background-attachment: fixed;
   height: 400px;
   background-position: 100% 100%;
@@ -682,12 +684,12 @@ main {
 }
 
 #work .sm-heading {
-  font-size: 20px;
+  font-size: 12px;
   letter-spacing: 15px;
 }
 
 #work-text {
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: 700;
   margin-left: -20px;
   letter-spacing: -2px;
@@ -802,6 +804,7 @@ main {
   & h2 {
     width: 100%;
     text-align: center;
+    font-size: 13px;
   }
 
   & .github-account {
@@ -838,7 +841,7 @@ main {
     }
 
     & .req-header {
-      font-size: 2rem;
+      font-size: 1.6rem;
       color: burlywood;
       font-family: "Gochi Hand", cursive;
 
@@ -850,7 +853,7 @@ main {
     }
 
     & .req-motive {
-      font-size: 18px;
+      font-size: 12px;
       width: 100%;
       height: auto;
       font-weight: 400;
@@ -881,6 +884,7 @@ main {
     top: 0;
     bottom: 0;
     height: 100%;
+    opacity: 1;
   }
 
   .con-introduction-bg {
@@ -890,6 +894,7 @@ main {
     right: 0;
     top: 0;
     bottom: 0;
+    opacity: 1;
   }
 }
 
@@ -901,6 +906,7 @@ main {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
+  opacity: 0.5;
 }
 
 #contact-intro {
@@ -912,14 +918,14 @@ main {
   color: dimgrey;
 
   .lg-heading {
-    font-size: 14vw;
-    letter-spacing: 15px;
+    font-size: 8vw;
+    letter-spacing: 10px;
     margin: 0;
 
     #contact-text {
       font-size: 6rem;
       font-weight: 700;
-      margin-left: -20px;
+      margin-left: -40px;
       letter-spacing: -2px;
     }
   }
@@ -956,7 +962,7 @@ main {
   }
 
   li {
-    font-size: 25px;
+    font-size: 14px;
     text-align: center;
     border-left: 3px solid #fff;
     background: rgba(9, 1, 1, 0.4);
@@ -993,11 +999,12 @@ main {
     border: 1px solid #00b1a7;
     transition: 0.6s linear ease-in;
     &:hover {
-      background: #00b1a7;;
+      background: #00b1a7;
       color: black;
     }
   }
 }
+
 /* new contact */
 #contact {
   padding: 4rem;
@@ -1083,8 +1090,8 @@ main {
       box-shadow: 1px 5px 0px 5px #000;
 
       &:hover {
-        background: $primary-color;
-        color: #00b1a7;
+        background: #00b1a7;
+        color: $primary-color;
         cursor: pointer;
         letter-spacing: 2px;
         transition: all 0.3s;
@@ -1093,7 +1100,7 @@ main {
   }
 }
 
-/* Button */
+/* Button on Contact page */
 .btn {
   display: block;
   padding: 0.2rem 1rem;
@@ -1129,13 +1136,6 @@ main {
   height: 100%;
   margin-top: 1.3rem;
 
-  &:hover {
-    color: dimgrey;
-    @include easeOut;
-    cursor: pointer;
-    transition-delay: all 0, 5s;
-  }
-
   & .footer-profile {
     display: flex;
     justify-content: space-around;
@@ -1144,12 +1144,21 @@ main {
     & ul li {
       display: inline;
       text-decoration: none;
+      font-size: 10px;
+
+      &:hover {
+        color: #00b1a7;
+        @include easeOut;
+        cursor: pointer;
+        transition-delay: all 0, 5s;
+      }
     }
   }
 
   & #small-text {
     text-align: center;
     margin-top: 10px;
+    font-family: "Teko", sans-serif;
   }
 }
 @import "mobile";
